# AstralEngine

./: .gitignore  AGENTS.md  ANALYSIS_IMPLEMENTATION_PLAN.md  Architecture_Audit_Report.md  BUILD_ERRORS_ANALYSIS.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CODE_REVIEW_REPORT.md  GameUISubsystem.md  IMGUI_INTEGRATION_GUIDE.md  JOLT_PHYSICS_INTEGRATION_GUIDE.md  LICENSE  MIMARI.md  README.md  Roadmap.md  SDL3_INTEGRATION_GUIDE.md  VULKAN_INTEGRATION_GUIDE.md  build_log.txt  config_output.txt  görev_raporu.md  imgui.ini  plan.md  test_automatic_cleanup.cpp
.roo/: UserInstructions.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
Assets/Materials/: Default.amat
Assets/Shaders/: triangle.frag  triangle.vert  triangle_fragment.slang  triangle_vertex.slang
Assets/Shaders/Common/: common.glsl  common.slang  lighting.glsl  lighting.slang  noise.glsl  noise.slang  pbr.glsl  pbr_lighting.slang  pbr_structs.slang  shadows.glsl  shadows.slang
Assets/Shaders/Compute/: image_processing.comp  image_processing_compute.slang  ocean_simulation.comp  ocean_simulation_compute.slang  particle_system.comp  particle_system.slang
Assets/Shaders/Include/: camera.glsl  camera.slang  lighting_structs.slang  material_properties.glsl  material_properties.slang  vertex_attributes.glsl  vertex_attributes.slang
Assets/Shaders/Materials/: deferred_lighting_fragment.slang  gbuffer_vertex.slang  pbr_material.frag  pbr_material.slang  pbr_material.vert  pbr_material_frag.slang  pbr_material_fragment.slang  pbr_material_vertex.slang  shadow_vertex.slang  skybox.frag  skybox.slang  skybox.vert  skybox_fragment.slang  unlit.frag  unlit.slang  unlit.vert  unlit_fragment.slang
Assets/Shaders/PostProcessing/: bloom.frag  bloom.slang  bloom.vert  bloom_frag.slang  bloom_fragment.slang  bloom_vertex.slang  tonemap.frag  tonemap.slang  tonemap.vert  tonemap_frag.slang
Assets/Shaders/Source/: PBR.frag  PBR.vert  ShadowDepth.frag  ShadowDepth.vert
Examples/: BMW_RenderTest.cpp  CMakeLists.txt  MaterialManagerTest.cpp  RenderTest.cpp  Sandbox.cpp
Source/: CMakeLists.txt  main.cpp  test_sdl3.cpp
Source/Core/: AstralImConfig.h  CMakeLists.txt  Engine.cpp  Engine.h  FileLogger.cpp  FileLogger.h  FileUtils.h  IApplication.h  ISubsystem.h  Logger.cpp  Logger.h  MathUtils.h  MemoryManager.cpp  MemoryManager.h  ThreadPool.cpp  ThreadPool.h  UUID.cpp  UUID.h
Source/Core/Math/: Bounds.h  Ray.h  Vector2.h  Vector4.h
Source/ECS/: CMakeLists.txt  Components.h
Source/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  EventManager.cpp  EventManager.h  KeyEvent.h  MouseEvent.h
Source/Subsystems/: CMakeLists.txt
Source/Subsystems/Asset/: AssetData.h  AssetHandle.cpp  AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetSubsystem.cpp  AssetSubsystem.h  CMakeLists.txt  IAssetImporter.h  (+11 more)
Source/Subsystems/Renderer/: BloomEffect.cpp  BloomEffect.h  Bounds.h  CMakeLists.txt  Camera.cpp  Camera.h  GraphicsDevice.cpp  GraphicsDevice.h  IPostProcessingEffect.h  IRenderer.h  PostProcessingEffectBase.cpp  PostProcessingEffectBase.h  PostProcessingSubsystem.cpp  PostProcessingSubsystem.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderSubsystem.cpp  RenderSubsystem.h  RendererFactory.cpp  RendererFactory.h  RendererTypes.h  TonemappingEffect.cpp  TonemappingEffect.h  VulkanBindlessSystem.cpp  VulkanBindlessSystem.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanMeshManager.cpp  VulkanMeshManager.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSynchronization.cpp  VulkanSynchronization.h  VulkanTextureManager.cpp  VulkanTextureManager.h  VulkanUtils.cpp  VulkanUtils.h
Source/Subsystems/Renderer/Buffers/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanMesh.cpp  VulkanMesh.h  VulkanTexture.cpp  VulkanTexture.h
Source/Subsystems/Renderer/Commands/: VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanPipeline.cpp  VulkanPipeline.h
Source/Subsystems/Renderer/Core/: Camera.cpp  Camera.h  IBLProcessor.cpp  IBLProcessor.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderSubsystem.cpp  RenderSubsystem.h  Texture.cpp  Texture.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameManager.cpp  VulkanFrameManager.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTransferManager.cpp  VulkanTransferManager.h
Source/Subsystems/Renderer/Material/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h
Source/Subsystems/Renderer/Passes/: GBufferPass.cpp  GBufferPass.h  IRenderPass.h
Source/Subsystems/Renderer/RHI/: IRHICommandList.h  IRHIDescriptor.h  IRHIDevice.h  IRHIPipeline.h  IRHIResource.h  RHI_Types.h
Source/Subsystems/Renderer/RHI/Vulkan/: VulkanCommandList.cpp  VulkanCommandList.h  VulkanDevice.cpp  VulkanDevice.h  VulkanMemoryAllocator.cpp  VulkanResources.cpp  VulkanResources.h
Source/Subsystems/Renderer/Shader/: ShaderManager.cpp  ShaderManager.h
Source/Subsystems/Renderer/Shaders/: IShader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderValidator.cpp  ShaderValidator.h  VulkanShader.cpp  VulkanShader.h
Source/Subsystems/Renderer/Texture/: TextureManager.cpp  TextureManager.h
Source/Subsystems/Renderer/Vulkan/: VulkanCommandBufferManager.cpp  VulkanCommandBufferManager.h  VulkanCommandManager.cpp  VulkanCommandManager.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h
Tests/: CMakeLists.txt  SceneSerializerTest.cpp
Tools/: CMakeLists.txt
Tools/Editor/: CMakeLists.txt  EditorApp.cpp
cmake/: AstralEngineConfig.cmake.in
docs/: ARCHITECTURE.md  BUILDING.md  CODING_STANDARDS.md  README.md  RENDERER.md  ROADMAP.md
docs/api/: asset.md  core.md  event-system.md  events.md  renderer.md  subsystems.md
docs/architecture/: README.md  core-modules.md  ecs.md  event-system.md  improvements.md  module-dependencies.md  overview.md  subsystem.md  subsystems.md
vulkan_docs/: modern_vulkan_features.md  vma_and_robustness.md
(+74 files in other folders)
